--- a/src/index.html
+++ b/src/index.html
@@ -20,7 +20,7 @@
     <meta name="msapplication-TileColor" content="#3f51b5" />
     <meta name="msapplication-TileImage" content="mstile-144x144.png" />
     <meta name="msapplication-config" content="browserconfig.xml" />
-    <link rel="icon" type="image/x-icon" href="favicon.ico" />
+    <link rel="icon" type="image/x-icon" href="favicon.png" />
     <link
       href="https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;500&display=swap"
       rel="stylesheet"
